<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- QQ -->
    <string name="app_name">声之形</string>
    <string name="et_account_hint">账号</string>
    <string name="et_password_hint">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="tv_country">中国+86</string>
    <string name="et_phoneNumber_hint">请输入你的手机号码</string>
    <string name="title_phoneNumber">请填写手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_xieyi">我已阅读并同意</string>
    <string name="tv_xieyi_url">使用条款和隐私政策</string>
    <string name="back">返回</string>
    <string name="tv_tips_password">密码由6-16位数字,字母或符号组成,请不要用9位以下纯数字</string>
    <string name="tv_tips_name">取一个自己喜欢的名称，以后还可以更改哦</string>
    <string name="et_name_hint">昵称</string>
    <string name="register_complete">完成</string>
    <string name="title_register_info">设置密码和昵称</string>
    <string name="tv_qq">您已成功加盟voice帮派，这是您的代号</string>
    <string name="tv_qq_number">666666666</string>
    <string name="tv_register_result">【利用规约已阅读并同意】</string>
    <string name="tv_tiaokuan">服务声明</string>
    <string name="tv_register_success">注册成功</string>
    <string name="register_success">开始Voice之旅~</string>
    <string name="tv_search">搜索</string>
    <string name="news">消息</string>
    <string name="user_name">开心一刻</string>
    <string name="user_feel">好好学习,天天向上</string>
    <string name="user_time">12:30</string>
    <string name="tv_loading">正加载,请稍后...</string>
    <string name="no_data">网络异常...</string>
    <string name="pop_chat">多人聊天</string>
    <string name="pop_sangzhao">分享</string>
    <string name="pop_camera">水印相机</string>
    <string name="pop_scan">扫一扫</string>
    <string name="app_cancle">不忍离去</string>
    <string name="app_change_user">改头换面</string>
    <string name="app_exit_user">归隐山林</string>
    
    <!-- Refresh -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    
    <!-- ercode -->
    <string name="scan_tip">请将二维码置于取景框内扫描</string>
    <string name="scan_retry">二维码扫描出错啦,请重新扫描</string>
    <string name="scan_title">扫一扫</string>
    <string name="sd_pic">相册</string>
    <string name="sacn_dialog_title">是否打开链接?</string>
    <string name="scan_url">http://www.baidu.com</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="camera_water">水印相机</string>
    <string name="camera_more">更多</string>
    <string name="camera_day">2014-04-14</string>
    <string name="camera_hour">21:01</string>
    <string name="camera_day_hour">2014-04-14 21:01</string>
    <string name="camera_address">珠海</string>
    <string name="camera_tep">23℃多云</string>
    <string name="camera_pm">PM2.5 32</string>
    <string name="camera_txt">静静的享受独自一个人的午后</string>
    <string name="camera_ni">虫虫</string>
    <string name="tiaozheng">旋转</string>
    <string name="control">管理</string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <string name="cnews">消息</string>
    <string name="call">通话</string>
    <string name="tv_phone">通讯录</string>
    <string name="tv_group">群组</string>
    <string name="tv_discuss">讨论组</string>
    <string name="tv_life">生活服务</string>   
    <string name="friend_group">好友分组</string> 
    <string name="device">我的设备</string>
    <string name="group_count">1/2</string>
    <string name="child_feel">[在线]好好学习天天向上</string>
    <string name="tv_call1">你通话过的联系人都会在这里出现</string>
    <string name="tv_call2">快和朋友开始语音通话吧</string>
    <string name="btn_call">找人聊聊</string>
    
    <string name="recentchat">最近聊天</string>
    <string name="choose_constact">选择联系人</string>
    <string name="search">请输入关键字</string>
    <string name="dynamic">学习</string>
    <string name="mime">我</string>
    <string name="tv_newfriend">新朋友</string>
    <string name="tv_tongxunlu">通讯录</string>
    <string name="tv_friend">QQ好友</string>
    
    <string name="wifi_state">WLAN 状态</string>
    <string name="instruction_pre">启动服务，可以从电脑远程管理手机文件</string>
    <string name="instruction">请在"我的电脑"地址栏输入:</string>
    <string name="notif_server_starting">远程管理已开启</string>
    <string name="notif_title">远程管理</string>
    <string name="no_wifi_hint">没有WLAN网络，请检查WLAN设置</string>
    <string name="start_server">开启服务</string>
    <string name="stop_server">停止服务</string>
    <string name="no_wifi">没有WLAN网络</string>
    <string name="storage_warning">没有外部存储设备或SD卡不可用</string>
    <string name="wifi"> 视频库</string>
     <!-- bbs -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
     <string name="about">关于</string>
    <string name="introduce">\n软件名称：声之形-基于声波图形的发音矫正软件</string>
    <string name="introduce2">\n开发团队：VoiceTalker</string>
    <string name="introduce3">\n软件说明：适用于发音器官正常的听障人士</string>
    <string name="introduce4">\n分为4个功能模块：</string>
    <string name="introduce5">\n学习模块、娱乐模块</string>
    <string name="introduce6">\n社区模块、用户模块</string>
      <string name="feedback">\n意见反馈网址:</string>

    <string name="bbs_1_A_1">凌雪</string>
    <string name="bbs_1_A_2">黄纯纯</string>
    <string name="bbs_1_A_3">一骑红尘</string>
    <string name="bbs_1_A_4">人气呆毛选手</string>
    <string name="bbs_1_A_5">口红小姐</string>
    <string name="bbs_1_A_6">HARUKI</string>
    <string name="bbs_Q_1">:今天学的怎么样？</string>
    <string name="bbs_Q_2">：今天天气很适合学习呀！</string>
    <string name="bbs_Q_3">:约一起练习？</string>
    <string name="bbs_Q_4">:厉害了呀</string>
    <string name="bbs_Q_5">:佩服佩服</string>
    <string name="bbs_Q_6">:改天叫我一起呀</string>
    <string name="bbs_A_1">:一般啦</string>
    <string name="bbs_A_2">:下次叫你一起</string>
    <string name="bbs_A_3">:嘻嘻</string>
    <string name="bbs_A_4">:再接再厉</string>
    <string name="bbs_A_5">:互相加油吧</string>
    <string name="bbs_A_6">:你也很厉害哟</string>

    
    
   
</resources>
